# sdl-game

./: CMakeLists.txt
game/: CMakeLists.txt  Game.cpp  Game.h  GameObject.h  IRenderable.h  IUpdateable.h  LTimer.h  Player.cpp  Player.h  Texture.cpp  Texture.h  main.cpp  main.h
